[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-analysis-py"
version = "0.0.2"
description = "Analysis of neuroelectrophysiology data in Python."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ryan Harvey", email = "ryanh412@gmail.com" }]
keywords = ["electrophysiology", "neuroscience", "data analysis"]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "matplotlib>=3.7.1",
    "scikit-learn>=1.2.2",
    "pandas>=1.5.0",
    "numba>=0.56.0",
    "tqdm>=4.64.0",
    "joblib>=1.2.0",
    "seaborn>=0.11.2",
    "scikit-image>=0.21.0",
    "nelpy @ git+https://github.com/nelpy/nelpy.git",
    "lazy-loader>=0.4",
    "PyWavelets>=1.6.0",
    "Bottleneck>=1.4.2",
    "tensorboard>=2.18.0",
    "lightning>=2.4.0",
    "h5py>=3.13.0",
    # Conditional dependency for Python < 3.11
    "tomli>=2.4.0; python_version < '3.11'",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
# For current source density (CSD) analysis
csd = [
    "elephant>=1.1.0",
    "neo>=0.13.3",
    "quantities>=0.15.0"
]
# For documentation generation
docs = [
    "zensical>=0.0.23",
    "mkdocstrings[python]>=0.26.1",
    "nbconvert>=7.0.0"
]
# An "all" group that combines all optional groups
all = [
    "elephant>=1.1.0",
    "neo>=0.13.3",
    "quantities>=0.15.0",
    "zensical>=0.0.23",
    "mkdocstrings[python]>=0.26.1",
    "nbconvert>=7.0.0"
]

[project.urls]
"Homepage" = "https://github.com/ryanharvey1/neuro_py/"

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.packages.find]
include = ['neuro_py']
exclude = ['docs']

[tool.ruff.lint]
select = ["NPY201"]
