[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-analysis-py"
version = "0.2.0"
description = "Analysis of neuroelectrophysiology data in Python."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ryan Harvey", email = "ryanh412@gmail.com" }]
keywords = ["electrophysiology", "neuroscience", "data analysis"]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "matplotlib>=3.7.1",
    "scikit-learn>=1.2.2",
    "pandas>=1.5.0",
    "numba>=0.56.0",
    "tqdm>=4.64.0",
    "joblib>=1.2.0",
    "seaborn>=0.11.2",
    "scikit-image>=0.21.0",
    "nelpy @ git+https://github.com/nelpy/nelpy.git",
    "lazy-loader>=0.4",
    "PyWavelets>=1.6.0",
    "Bottleneck>=1.4.2",
    "h5py>=3.13.0",
    "decorator>=4.4.2",
    # Conditional dependency for Python < 3.11
    "tomli>=2.4.0; python_version < '3.11'",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
# For deep-learning decoders and training pipelines
dl = [
    "lightning>=2.4.0",
    "tensorboard>=2.18.0"
]
# For current source density (CSD) analysis
csd = [
    "elephant>=1.1.0",
    "neo>=0.13.3",
    "quantities>=0.15.0"
]
# For documentation generation
docs = [
    "zensical>=0.0.23",
    "mkdocstrings[python]>=0.26.1",
    "nbconvert>=7.0.0",
    "marimo>=0.23.0"
]
# An "all" group that combines all optional groups
all = [
    "lightning>=2.4.0",
    "tensorboard>=2.18.0",
    "elephant>=1.1.0",
    "neo>=0.13.3",
    "quantities>=0.15.0",
    "zensical>=0.0.23",
    "mkdocstrings[python]>=0.26.1",
    "nbconvert>=7.0.0",
    "marimo>=0.23.0"
]

[project.urls]
"Homepage" = "https://github.com/ryanharvey1/neuro_py/"

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.packages.find]
include = ['neuro_py']
exclude = ['docs']

[tool.ruff.lint]
select = ["NPY201"]

[tool.ty.src]
include = ["neuro_py", "tests", "tools"]
exclude = [
    "backup/**",
    "build/**",
    "data/**",
    "docs/**",
    "reference/**",
    "site/**",
    "tutorials/**",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
all = "error"

[tool.ty.analysis]
# `track_linearization` is an optional dependency used by the linearization pipeline.
allowed-unresolved-imports = ["track_linearization"]

[[tool.ty.overrides]]
include = ["tests/**"]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/process/correlations.py",
    "neuro_py/process/intervals.py",
    "neuro_py/process/peri_event.py",
]
rules = { not-iterable = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/behavior/circle_maze.py",
    "neuro_py/behavior/get_trials.py",
    "neuro_py/behavior/linear_positions.py",
    "neuro_py/behavior/linearization.py",
    "neuro_py/behavior/linearization_pipeline.py",
]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/detectors/dentate_spike.py",
    "neuro_py/detectors/sharp_wave_ripple.py",
    "neuro_py/detectors/up_down_state.py",
]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/ensemble/__init__.pyi",
    "neuro_py/ensemble/assembly.py",
    "neuro_py/ensemble/assembly_reactivation.py",
    "neuro_py/ensemble/decoding/bayesian.py",
    "neuro_py/ensemble/decoding/lstm.py",
    "neuro_py/ensemble/decoding/m2mlstm.py",
    "neuro_py/ensemble/decoding/mlp.py",
    "neuro_py/ensemble/decoding/pipeline.py",
    "neuro_py/ensemble/decoding/preprocess.py",
    "neuro_py/ensemble/decoding/transformer.py",
    "neuro_py/ensemble/explained_variance.py",
    "neuro_py/ensemble/pairwise_bias_correlation.py",
    "neuro_py/ensemble/replay.py",
    "neuro_py/ensemble/similarity_index.py",
    "neuro_py/ensemble/similaritymat.py",
]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/io/__init__.pyi",
]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/lfp/CSD.py",
    "neuro_py/lfp/preprocessing.py",
    "neuro_py/lfp/spectral.py",
    "neuro_py/lfp/theta_cycles.py",
]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/plotting/decorators.py",
    "neuro_py/plotting/events.py",
    "neuro_py/plotting/figure_helpers.py",
    "neuro_py/plotting/replay.py",
]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/process/batch_analysis.py",
    "neuro_py/process/pychronux.py",
]
rules = { all = "ignore" }

[[tool.ty.overrides]]
include = [
    "neuro_py/raw/preprocessing.py",
    "neuro_py/raw/spike_sorting.py",
    "neuro_py/session/locate_epochs.py",
    "neuro_py/stats/circ_stats.py",
    "neuro_py/stats/regression.py",
    "neuro_py/stats/system_identifier.py",
    "neuro_py/tuning/fields.py",
    "neuro_py/tuning/maps.py",
    "neuro_py/util/array.py",
]
rules = { all = "ignore" }
